@@ -16,11 +16,9 @@
  */
 package org.apache.sling.models.impl;
 
-import java.lang.annotation.Annotation;
 import java.lang.ref.PhantomReference;
 import java.lang.ref.ReferenceQueue;
 import java.lang.reflect.AnnotatedElement;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.InvocationTargetException;
@@ -45,12 +43,8 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 
 import javax.annotation.PostConstruct;
-import javax.inject.Inject;
-import javax.inject.Named;
 
 import org.apache.commons.beanutils.PropertyUtils;
-import org.apache.commons.lang.ArrayUtils;
-import org.apache.commons.lang.ClassUtils;
 import org.apache.felix.scr.annotations.Activate;
 import org.apache.felix.scr.annotations.Component;
 import org.apache.felix.scr.annotations.Deactivate;
@@ -58,25 +52,39 @@ import org.apache.felix.scr.annotations.Property;
 import org.apache.felix.scr.annotations.Reference;
 import org.apache.felix.scr.annotations.ReferenceCardinality;
 import org.apache.felix.scr.annotations.ReferencePolicy;
+import org.apache.felix.scr.annotations.ReferencePolicyOption;
+import org.apache.felix.scr.annotations.Service;
+import org.apache.sling.api.SlingHttpServletRequest;
 import org.apache.sling.api.adapter.Adaptable;
 import org.apache.sling.api.adapter.AdapterFactory;
+import org.apache.sling.api.resource.Resource;
 import org.apache.sling.commons.osgi.PropertiesUtil;
 import org.apache.sling.commons.osgi.ServiceUtil;
-import org.apache.sling.models.annotations.Default;
-import org.apache.sling.models.annotations.DefaultInjectionStrategy;
 import org.apache.sling.models.annotations.Model;
-import org.apache.sling.models.annotations.Optional;
-import org.apache.sling.models.annotations.Required;
-import org.apache.sling.models.annotations.Source;
-import org.apache.sling.models.annotations.Via;
+import org.apache.sling.models.annotations.ValidationStrategy;
+import org.apache.sling.models.factory.InvalidAdaptableException;
+import org.apache.sling.models.factory.InvalidResourceException;
+import org.apache.sling.models.factory.InvalidValidationModelException;
+import org.apache.sling.models.factory.MissingElementsException;
+import org.apache.sling.models.factory.ModelClassException;
+import org.apache.sling.models.factory.ModelFactory;
+import org.apache.sling.models.impl.Result.FailureType;
+import org.apache.sling.models.impl.model.ConstructorParameter;
+import org.apache.sling.models.impl.model.InjectableElement;
+import org.apache.sling.models.impl.model.InjectableField;
+import org.apache.sling.models.impl.model.InjectableMethod;
+import org.apache.sling.models.impl.model.ModelClass;
+import org.apache.sling.models.impl.model.ModelClassConstructor;
+import org.apache.sling.models.impl.validation.ModelValidation;
 import org.apache.sling.models.spi.AcceptsNullName;
 import org.apache.sling.models.spi.DisposalCallback;
 import org.apache.sling.models.spi.DisposalCallbackRegistry;
 import org.apache.sling.models.spi.ImplementationPicker;
 import org.apache.sling.models.spi.Injector;
-import org.apache.sling.models.spi.injectorspecific.InjectAnnotation;
 import org.apache.sling.models.spi.injectorspecific.InjectAnnotationProcessor;
 import org.apache.sling.models.spi.injectorspecific.InjectAnnotationProcessorFactory;
+import org.apache.sling.models.spi.injectorspecific.InjectAnnotationProcessorFactory2;
+import org.apache.sling.models.spi.injectorspecific.StaticInjectAnnotationProcessorFactory;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.Constants;
 import org.osgi.framework.ServiceRegistration;
@@ -84,8 +92,9 @@ import org.osgi.service.component.ComponentContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-@Component(metatype = true)
-public class ModelAdapterFactory implements AdapterFactory, Runnable {
+@Component(metatype = true, immediate = true)
+@Service(value = ModelFactory.class)
+public class ModelAdapterFactory implements AdapterFactory, Runnable, ModelFactory {
 
     private static class DisposalCallbackRegistryImpl implements DisposalCallbackRegistry {
 
@@ -141,10 +150,23 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
     private final Map<Object, InjectAnnotationProcessorFactory> injectAnnotationProcessorFactories = new TreeMap<Object, InjectAnnotationProcessorFactory>();
 
     private volatile InjectAnnotationProcessorFactory[] sortedInjectAnnotationProcessorFactories = new InjectAnnotationProcessorFactory[0];
+    
+    @Reference(name = "injectAnnotationProcessorFactory2", referenceInterface = InjectAnnotationProcessorFactory2.class,
+            cardinality = ReferenceCardinality.OPTIONAL_MULTIPLE, policy = ReferencePolicy.DYNAMIC)
+    private final Map<Object, InjectAnnotationProcessorFactory2> injectAnnotationProcessorFactories2 = new TreeMap<Object, InjectAnnotationProcessorFactory2>();
+
+    private volatile InjectAnnotationProcessorFactory2[] sortedInjectAnnotationProcessorFactories2 = new InjectAnnotationProcessorFactory2[0];
+
+    @Reference(name = "staticInjectAnnotationProcessorFactory", referenceInterface = StaticInjectAnnotationProcessorFactory.class,
+            cardinality = ReferenceCardinality.OPTIONAL_MULTIPLE, policy = ReferencePolicy.DYNAMIC)
+    private final Map<Object, StaticInjectAnnotationProcessorFactory> staticInjectAnnotationProcessorFactories = new TreeMap<Object, StaticInjectAnnotationProcessorFactory>();
 
     @Reference(name = "implementationPicker", referenceInterface = ImplementationPicker.class,
             cardinality = ReferenceCardinality.OPTIONAL_MULTIPLE, policy = ReferencePolicy.DYNAMIC)
     private final Map<Object, ImplementationPicker> implementationPickers = new TreeMap<Object, ImplementationPicker>();
+    
+    @Reference(cardinality=ReferenceCardinality.OPTIONAL_UNARY, policyOption=ReferencePolicyOption.GREEDY)
+    private ModelValidation modelValidation;
 
     ModelPackageBundleListener listener;
 
@@ -157,28 +179,90 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
     // Use threadlocal to count recursive invocations and break recursing if a max. limit is reached (to avoid cyclic dependencies)
     private ThreadLocal<ThreadInvocationCounter> invocationCountThreadLocal;
 
-    @SuppressWarnings("unchecked")
     public <AdapterType> AdapterType getAdapter(Object adaptable, Class<AdapterType> type) {
+        Result<AdapterType> result = internalCreateModel(adaptable, type);
+        result.logFailures(log);
+        return result.getModel();
+    }
+
+    @Override
+    public <ModelType> ModelType createModel(Object adaptable, Class<ModelType> type) throws MissingElementsException,
+            InvalidAdaptableException, InvalidValidationModelException, InvalidResourceException {
+        Result<ModelType> result = internalCreateModel(adaptable, type);
+        result.throwException(log);
+        return result.getModel();
+    }
+
+    @Override
+    public boolean canCreateFromAdaptable(Object adaptable, Class<?> modelClass) throws ModelClassException {
+        return innerCanCreateFromAdaptable(adaptable, modelClass);
+    }
+
+    private boolean innerCanCreateFromAdaptable(Object adaptable, Class<?> requestedType) throws ModelClassException {
+        ModelClass<?> modelClass = getImplementationTypeForAdapterType(requestedType, adaptable);
+        if (!modelClass.hasModelAnnotation()) {
+            throw new ModelClassException(String.format("Model class '%s' does not have a model annotation", modelClass));
+        }
+
+        Class<?>[] declaredAdaptable = modelClass.getModelAnnotation().adaptables();
+        for (Class<?> clazz : declaredAdaptable) {
+            if (clazz.isInstance(adaptable)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    @Override
+    public boolean isModelClass(Object adaptable, Class<?> requestedType) {
+        ModelClass<?> type = getImplementationTypeForAdapterType(requestedType, adaptable);
+        return type.hasModelAnnotation();
+    }
+
+    /**
+     * 
+     * @param type
+     * @param adaptable
+     * @return the implementation type to use for the desired model type
+     * @see <a
+     *      href="http://sling.apache.org/documentation/bundles/models.html#specifying-an-alternate-adapter-class-since-sling-models-110">Specifying
+     *      an Alternate Adapter Class</a>
+     */
+    private <ModelType> ModelClass<ModelType> getImplementationTypeForAdapterType(Class<ModelType> requestedType, Object adaptable) {
+        // lookup ModelClass wrapper for implementation type
+        // additionally check if a different implementation class was registered for this adapter type
+        ModelClass<ModelType> modelClass = this.adapterImplementations.lookup(requestedType, adaptable);
+        if (modelClass != null) {
+            log.debug("Using implementation type {} for requested adapter type {}", modelClass, requestedType);
+            return modelClass;
+        }
+        // normally this code path is not executed, because all types are cached in adapterImplementations
+        // it is still useful for unit testing
+        return new ModelClass<ModelType>(requestedType, this.adapterImplementations.getStaticInjectAnnotationProcessorFactories());
+    }
+
+    @SuppressWarnings("unchecked")
+    private <ModelType> Result<ModelType> internalCreateModel(Object adaptable, Class<ModelType> requestedType) {
+        Result<ModelType> result = new Result<ModelType>();
         ThreadInvocationCounter threadInvocationCounter = invocationCountThreadLocal.get();
         if (threadInvocationCounter.isMaximumReached()) {
-            log.error("Adapting {} to {} failed, too much recursive invocations (>={}).",
-                    new Object[] { adaptable, type, threadInvocationCounter.maxRecursionDepth });
-            return null;
+            String msg = String.format("Adapting %s to %s failed, too much recursive invocations (>=%s).",
+                    new Object[] { adaptable, requestedType, threadInvocationCounter.maxRecursionDepth });
+            result.addFailure(FailureType.OTHER, msg);
+            return result;
         };
         threadInvocationCounter.increase();
         try {
             // check if a different implementation class was registered for this adapter type
-            Class<?> implementationType = this.adapterImplementations.lookup(type, adaptable);
-            if (implementationType != null) {
-                type = (Class<AdapterType>) implementationType;
-            }
+            ModelClass<ModelType> modelClass = getImplementationTypeForAdapterType(requestedType, adaptable);
 
-            Model modelAnnotation = type.getAnnotation(Model.class);
-            if (modelAnnotation == null) {
-                return null;
+            if (!modelClass.hasModelAnnotation()) {
+                result.addFailure(FailureType.NO_MODEL_ANNOTATION, modelClass.getType());
+                return result;
             }
             boolean isAdaptable = false;
 
+            Model modelAnnotation = modelClass.getModelAnnotation();
             Class<?>[] declaredAdaptable = modelAnnotation.adaptables();
             for (Class<?> clazz : declaredAdaptable) {
                 if (clazz.isInstance(adaptable)) {
@@ -186,61 +270,55 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
                 }
             }
             if (!isAdaptable) {
-                return null;
-            }
-
-            if (type.isInterface()) {
-                InvocationHandler handler = createInvocationHandler(adaptable, type, modelAnnotation);
-                if (handler != null) {
-                    return (AdapterType) Proxy.newProxyInstance(type.getClassLoader(), new Class<?>[] { type }, handler);
-                } else {
-                    return null;
-                }
+                result.addFailure(FailureType.ADAPTABLE_DOES_NOT_MATCH, modelClass.getType());
             } else {
-                try {
-                    return createObject(adaptable, type, modelAnnotation);
-                } catch (Exception e) {
-                    log.error("unable to create object", e);
-                    return null;
+                if (!validateModel(modelAnnotation, adaptable, result)) {
+                    return result;
+                }
+                if (modelClass.getType().isInterface()) {
+                    InvocationHandler handler = createInvocationHandler(adaptable, modelClass, result);
+                    if (handler != null) {
+                        ModelType model = (ModelType) Proxy.newProxyInstance(modelClass.getType().getClassLoader(), new Class<?>[] { modelClass.getType() }, handler);
+                        result.setModel(model);
+                    }
+                } else {
+                    try {
+                        ModelType model = createObject(adaptable, modelClass, result);
+                        result.setModel(model);
+                        return result;
+                    } catch (Exception e) {
+                        result.addFailure(FailureType.OTHER, "Unable to create object", e);
+                    }
                 }
             }
+            return result;
         } finally {
             threadInvocationCounter.decrease();
         }
     }
-
-    private Set<Field> collectInjectableFields(Class<?> type) {
-        Set<Field> result = new HashSet<Field>();
-        while (type != null) {
-            Field[] fields = type.getDeclaredFields();
-            addAnnotated(fields, result);
-            type = type.getSuperclass();
-        }
-        return result;
-    }
-
-    private Set<Method> collectInjectableMethods(Class<?> type) {
-        Set<Method> result = new HashSet<Method>();
-        while (type != null) {
-            Method[] methods = type.getDeclaredMethods();
-            addAnnotated(methods, result);
-            type = type.getSuperclass();
-        }
-        return result;
-    }
-
-    private <T extends AnnotatedElement> void addAnnotated(T[] elements, Set<T> set) {
-        for (T element : elements) {
-            Inject injection = getAnnotation(element, Inject.class);
-            if (injection != null) {
-                set.add(element);
-            } else {
-                InjectAnnotation modelInject = getAnnotation(element, InjectAnnotation.class);
-                if (modelInject != null) {
-                    set.add(element);
+    
+    private <ModelType> boolean validateModel(Model modelAnnotation, Object adaptable, Result<ModelType> result) {
+        if (modelAnnotation.validation() != ValidationStrategy.DISABLED) {
+            if (modelValidation == null) {
+                result.addFailure(FailureType.VALIDATION_NOT_AVAILABLE);
+                return false;
+            }
+            Resource resource = null;
+            if (adaptable instanceof SlingHttpServletRequest) {
+                resource = ((SlingHttpServletRequest)adaptable).getResource();
+            } else if (adaptable instanceof Resource) {
+                resource = (Resource)adaptable;
+            }
+            if (resource != null) {
+                if (!modelValidation.validate(resource, modelAnnotation.validation() == ValidationStrategy.REQUIRED, result)) {
+                    return false;
                 }
+            } else {
+                result.addFailureWithParameters(FailureType.ADAPTABLE_NOT_USABLE_FOR_VALIDATION, adaptable.getClass().getName());
+                return false;
             }
         }
+        return true;
     }
 
     private static interface InjectCallback {
@@ -248,12 +326,13 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
          * Is called each time when the given value should be injected into the given element
          * @param element
          * @param value
+         * @param result
          * @return true if injection was successful otherwise false
          */
-        public boolean inject(AnnotatedElement element, Object value);
+        public boolean inject(InjectableElement element, Object value, Result<?> result);
     }
 
-    private static class SetFieldCallback implements InjectCallback {
+    private class SetFieldCallback implements InjectCallback {
 
         private final Object object;
 
@@ -262,12 +341,12 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
 
         @Override
-        public boolean inject(AnnotatedElement element, Object value) {
-            return setField((Field) element, object, value);
+        public boolean inject(InjectableElement element, Object value, Result<?> result) {
+            return setField((InjectableField) element, object, value, result);
         }
     }
 
-    private static class SetMethodsCallback implements InjectCallback {
+    private class SetMethodsCallback implements InjectCallback {
 
         private final Map<Method, Object> methods;
 
@@ -276,12 +355,12 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
 
         @Override
-        public boolean inject(AnnotatedElement element, Object value) {
-            return setMethod((Method) element, methods, value);
+        public boolean inject(InjectableElement element, Object value, Result<?> result) {
+            return setMethod((InjectableMethod) element, methods, value, result);
         }
     }
 
-    private static class SetConstructorParameterCallback implements InjectCallback {
+    private class SetConstructorParameterCallback implements InjectCallback {
 
         private final List<Object> parameterValues;
 
@@ -290,37 +369,45 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
 
         @Override
-        public boolean inject(AnnotatedElement element, Object value) {
-            return setConstructorParameter((ConstructorParameter)element, parameterValues, value);
+        public boolean inject(InjectableElement element, Object value, Result<?> result) {
+            return setConstructorParameter((ConstructorParameter)element, parameterValues, value, result);
         }
     }
 
-    private boolean injectElement(final AnnotatedElement element, final Object adaptable, final Type type,
-            final boolean injectPrimitiveInitialValue, final Model modelAnnotation, final DisposalCallbackRegistry registry,
-            final InjectCallback callback) {
+    private boolean injectElement(final InjectableElement element, final Object adaptable, 
+            final Model modelAnnotation, final DisposalCallbackRegistry registry,
+            final InjectCallback callback, Result<?> result) {
 
         InjectAnnotationProcessor annotationProcessor = null;
-        String source = getSource(element);
+        String source = element.getSource();
         boolean wasInjectionSuccessful = false;
 
         // find an appropriate annotation processor
-        for (InjectAnnotationProcessorFactory factory : sortedInjectAnnotationProcessorFactories) {
-            annotationProcessor = factory.createAnnotationProcessor(adaptable, element);
+        for (InjectAnnotationProcessorFactory2 factory : sortedInjectAnnotationProcessorFactories2) {
+            annotationProcessor = factory.createAnnotationProcessor(adaptable, element.getAnnotatedElement());
             if (annotationProcessor != null) {
                 break;
+            }
+        }
+        if (annotationProcessor == null) {
+            for (InjectAnnotationProcessorFactory factory : sortedInjectAnnotationProcessorFactories) {
+                annotationProcessor = factory.createAnnotationProcessor(adaptable, element.getAnnotatedElement());
+                if (annotationProcessor != null) {
+                    break;
+                }
             }
         }
 
         String name = getName(element, annotationProcessor);
         Object injectionAdaptable = getAdaptable(adaptable, element, annotationProcessor);
 
-        // find the right injector
-        for (Injector injector : sortedInjectors) {
-            if (source == null || source.equals(injector.getName())) {
-                if (name != null || injector instanceof AcceptsNullName) {
-                    if (injectionAdaptable != null) {
-                        Object value = injector.getValue(injectionAdaptable, name, type, element, registry);
-                        if (callback.inject(element, value)) {
+        if (injectionAdaptable != null) {
+            // find the right injector
+            for (Injector injector : sortedInjectors) {
+                if (source == null || source.equals(injector.getName())) {
+                    if (name != null || injector instanceof AcceptsNullName) {
+                        Object value = injector.getValue(injectionAdaptable, name, element.getType(), element.getAnnotatedElement(), registry);
+                        if (callback.inject(element, value, result)) {
                             wasInjectionSuccessful = true;
                             break;
                         }
@@ -330,14 +417,14 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
         // if injection failed, use default
         if (!wasInjectionSuccessful) {
-            wasInjectionSuccessful = injectDefaultValue(element, type, annotationProcessor, callback);
+            wasInjectionSuccessful = injectDefaultValue(element, annotationProcessor, callback, result);
         }
 
         // if default is not set, check if mandatory
         if (!wasInjectionSuccessful) {
-            if (isOptional(element, modelAnnotation, annotationProcessor)) {
-                if (injectPrimitiveInitialValue) {
-                    injectPrimitiveInitialValue(element, type, callback);
+            if (element.isOptional(annotationProcessor)) {
+                if (element.isPrimitive()) {
+                    injectPrimitiveInitialValue(element, callback, result);
                 }
             } else {
                 return false;
@@ -347,8 +434,8 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         return true;
     }
 
-    private InvocationHandler createInvocationHandler(final Object adaptable, final Class<?> type, Model modelAnnotation) {
-        Set<Method> injectableMethods = collectInjectableMethods(type);
+    private <ModelType> InvocationHandler createInvocationHandler(final Object adaptable, final ModelClass<ModelType> modelClass, final Result<ModelType> result) {
+        InjectableMethod[] injectableMethods = modelClass.getInjectableMethods();
         final Map<Method, Object> methods = new HashMap<Method, Object>();
         SetMethodsCallback callback = new SetMethodsCallback(methods);
         MapBackedInvocationHandler handler = new MapBackedInvocationHandler(methods);
@@ -357,20 +444,14 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         registerCallbackRegistry(handler, registry);
         Set<Method> requiredMethods = new HashSet<Method>();
 
-        for (Method method : injectableMethods) {
-            Type genericReturnType = method.getGenericReturnType();
-            Type returnType = mapPrimitiveClasses(genericReturnType);
-            boolean isPrimitive = false;
-            if (returnType != genericReturnType) {
-                isPrimitive = true;
-            }
-            if (!injectElement(method, adaptable, returnType, isPrimitive, modelAnnotation, registry, callback)) {
-                requiredMethods.add(method);
+        for (InjectableMethod method : injectableMethods) {
+            if (!injectElement(method, adaptable, modelClass.getModelAnnotation(), registry, callback, result)) {
+                requiredMethods.add(method.getMethod());
             }
         }
         registry.seal();
         if (!requiredMethods.isEmpty()) {
-            log.warn("Required methods {} on model interface {} were not able to be injected.", requiredMethods, type);
+            result.addFailure(FailureType.MISSING_METHODS, requiredMethods, modelClass.getType());
             return null;
         }
         return handler;
@@ -381,57 +462,29 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         disposalCallbacks.put(reference, registry);
     }
 
-    private String getSource(AnnotatedElement element) {
-        Source source = getAnnotation(element, Source.class);
-        if (source != null) {
-            return source.value();
-        } else {
-            return null;
-        }
-    }
-
-    /**
-     * Get an annotation from either the element itself or on any of the
-     * element's annotations (meta-annotations).
-     * 
-     * @param element the element
-     * @param annotationClass the annotation class
-     * @return the found annotation or null
-     */
-    private <T extends Annotation> T getAnnotation(AnnotatedElement element, Class<T> annotationClass) {
-        T annotation = element.getAnnotation(annotationClass);
-        if (annotation != null) {
-            return annotation;
-        } else {
-            for (Annotation ann : element.getAnnotations()) {
-                annotation = ann.annotationType().getAnnotation(annotationClass);
-                if (annotation != null) {
-                    return annotation;
-                }
-            }
-        }
-        return null;
-    }
-
-    private <AdapterType> AdapterType createObject(Object adaptable, Class<AdapterType> type, Model modelAnnotation)
+    private <ModelType> ModelType createObject(final Object adaptable, final ModelClass<ModelType> modelClass, final Result<ModelType> result)
             throws InstantiationException, InvocationTargetException, IllegalAccessException {
         DisposalCallbackRegistryImpl registry = new DisposalCallbackRegistryImpl();
 
-        Constructor<AdapterType> constructorToUse = getBestMatchingConstructor(adaptable, type);
+        ModelClassConstructor<ModelType> constructorToUse = getBestMatchingConstructor(adaptable, modelClass);
         if (constructorToUse == null) {
-            log.warn("Model class {} does not have a usable constructor", type.getName());
+            result.addFailure(FailureType.NO_USABLE_CONSTRUCTOR, modelClass.getType());
             return null;
         }
 
-        final AdapterType object;
-        if (constructorToUse.getParameterTypes().length == 0) {
+        final ModelType object;
+        if (constructorToUse.getConstructor().getParameterTypes().length == 0) {
             // no parameters for constructor injection? instantiate it right away
-            object = constructorToUse.newInstance();
+            object = constructorToUse.getConstructor().newInstance();
         } else {
             // instantiate with constructor injection
             // if this fails, make sure resources that may be claimed by injectors are cleared up again
             try {
-                object = newInstanceWithConstructorInjection(constructorToUse, adaptable, type, modelAnnotation, registry);
+                object = newInstanceWithConstructorInjection(constructorToUse, adaptable, modelClass, registry, result);
+                if (object == null) {
+                    registry.onDisposed();
+                    return null;
+                }
             } catch (InstantiationException ex) {
                 registry.onDisposed();
                 throw ex;
@@ -444,35 +497,32 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
             }
         }
 
-        if (object == null) {
-            registry.onDisposed();
-            return null;
-        }
-
         registerCallbackRegistry(object, registry);
 
         InjectCallback callback = new SetFieldCallback(object);
 
         Set<Field> requiredFields = new HashSet<Field>();
 
-        Set<Field> injectableFields = collectInjectableFields(type);
-        for (Field field : injectableFields) {
-            Type fieldType = mapPrimitiveClasses(field.getGenericType());
-            if (!injectElement(field, adaptable, fieldType, false, modelAnnotation, registry, callback)) {
-                requiredFields.add(field);
+        InjectableField[] injectableFields = modelClass.getInjectableFields();
+        for (InjectableField field : injectableFields) {
+            if (!injectElement(field, adaptable, modelClass.getModelAnnotation(), registry, callback, result)) {
+                requiredFields.add(field.getField());
             }
         }
 
         registry.seal();
         if (!requiredFields.isEmpty()) {
-            log.warn("Required properties {} on model class {} were not able to be injected.", requiredFields, type);
+            result.addFailure(FailureType.MISSING_FIELDS, requiredFields, modelClass.getType());
             return null;
         }
         try {
             invokePostConstruct(object);
             return object;
-        } catch (Exception e) {
-            log.error("Unable to invoke post construct method.", e);
+        } catch (InvocationTargetException e) {
+            result.addFailure(FailureType.FAILED_CALLING_POST_CONSTRUCT, e.getCause());
+            return null;
+        } catch (IllegalAccessException e) {
+            result.addFailure(FailureType.FAILED_CALLING_POST_CONSTRUCT, e);
             return null;
         }
 
@@ -485,152 +535,68 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
      * @return Constructor or null if none found
      */
     @SuppressWarnings("unchecked")
-    private <AdapterType> Constructor<AdapterType> getBestMatchingConstructor(Object adaptable, Class<AdapterType> type) {
-        Constructor<?>[] constructors = type.getConstructors();
+    private <ModelType> ModelClassConstructor<ModelType> getBestMatchingConstructor(Object adaptable, ModelClass<ModelType> type) {
+        ModelClassConstructor[] constructors = type.getConstructors();
 
-        // sort the constructor list in order from most params to least params, and constructors with @Inject annotation first
-        Arrays.sort(constructors, new ParameterCountInjectComparator());
-
-        for (Constructor<?> constructor : constructors) {
+        for (ModelClassConstructor constructor : constructors) {
             // first try to find the constructor with most parameters and @Inject annotation
-            if (constructor.isAnnotationPresent(Inject.class)) {
-                return (Constructor<AdapterType>) constructor;
+            if (constructor.hasInjectAnnotation()) {
+                return constructor;
             }
             // compatibility mode for sling models implementation <= 1.0.6:
             // support constructor without @Inject if it has exactly one parameter matching the adaptable class
-            final Class<?>[] paramTypes = constructor.getParameterTypes();
+            final Class<?>[] paramTypes = constructor.getConstructor().getParameterTypes();
             if (paramTypes.length == 1) {
-                Class<?> paramType = constructor.getParameterTypes()[0];
+                Class<?> paramType = constructor.getConstructor().getParameterTypes()[0];
                 if (paramType.isInstance(adaptable)) {
-                    return (Constructor<AdapterType>) constructor;
+                    return constructor;
                 }
             }
             // if no constructor for injection found use public constructor without any params
-            if (constructor.getParameterTypes().length == 0) {
-                return (Constructor<AdapterType>) constructor;
+            if (constructor.getConstructor().getParameterTypes().length == 0) {
+                return constructor;
             }
         }
         return null;
     }
 
-    private <AdapterType> AdapterType newInstanceWithConstructorInjection(Constructor<AdapterType> constructor, Object adaptable,
-            Class<AdapterType> type, Model modelAnnotation, DisposalCallbackRegistry registry)
+    private <ModelType> ModelType newInstanceWithConstructorInjection(final ModelClassConstructor<ModelType> constructor, final Object adaptable,
+            final ModelClass<ModelType> modelClass, final DisposalCallbackRegistry registry, final Result<ModelType> result)
             throws InstantiationException, InvocationTargetException, IllegalAccessException {
-        Set<ConstructorParameter> requiredParameters = new HashSet<ConstructorParameter>();
-        Type[] parameterTypes = constructor.getGenericParameterTypes();
-        List<Object> paramValues = new ArrayList<Object>(Arrays.asList(new Object[parameterTypes.length]));
+        ConstructorParameter[] parameters = constructor.getConstructorParameters();
+
+        Set<AnnotatedElement> requiredParameters = new HashSet<AnnotatedElement>();
+        List<Object> paramValues = new ArrayList<Object>(Arrays.asList(new Object[parameters.length]));
         InjectCallback callback = new SetConstructorParameterCallback(paramValues);
 
-        for (int i = 0; i < parameterTypes.length; i++) {
-            Type genericType = mapPrimitiveClasses(parameterTypes[i]);
-
-            boolean isPrimitive = false;
-            if (parameterTypes[i] != genericType) {
-                isPrimitive = true;
-            }
-            ConstructorParameter constructorParameter = new ConstructorParameter(
-                    constructor.getParameterAnnotations()[i], constructor.getParameterTypes()[i], genericType, i);
-            if (!injectElement(constructorParameter, adaptable, genericType, isPrimitive, modelAnnotation, registry, callback)) {
-                requiredParameters.add(constructorParameter);
+        for (int i = 0; i < parameters.length; i++) {
+            if (!injectElement(parameters[i], adaptable, modelClass.getModelAnnotation(), registry, callback, result)) {
+                requiredParameters.add(parameters[i].getAnnotatedElement());
             }
         }
         if (!requiredParameters.isEmpty()) {
-            log.warn("Required constructor parameters {} on model class {} were not able to be injected.", requiredParameters, type);
+            result.addFailure(FailureType.MISSING_CONSTRUCTOR_PARAMS, requiredParameters, modelClass.getType());
             return null;
         }
-        return constructor.newInstance(paramValues.toArray(new Object[paramValues.size()]));
+        return constructor.getConstructor().newInstance(paramValues.toArray(new Object[paramValues.size()]));
     }
 
-    private boolean isOptional(AnnotatedElement point, Model modelAnnotation, InjectAnnotationProcessor annotationProcessor) {
-        if (annotationProcessor != null) {
-            Boolean isOptional = annotationProcessor.isOptional();
-            if (isOptional != null) {
-                return isOptional.booleanValue();
-            }
-        }
-        if (modelAnnotation.defaultInjectionStrategy() == DefaultInjectionStrategy.REQUIRED) {
-            return (point.getAnnotation(Optional.class) != null);
-        } else {
-            return (point.getAnnotation(Required.class) == null);
-        }
-        
-    }
-
-    private boolean injectDefaultValue(AnnotatedElement point, Type type, InjectAnnotationProcessor processor,
-            InjectCallback callback) {
+    private boolean injectDefaultValue(InjectableElement point, InjectAnnotationProcessor processor,
+            InjectCallback callback, Result<?> result) {
 
         if (processor != null) {
             if (processor.hasDefault()) {
-                return callback.inject(point, processor.getDefault());
+                return callback.inject(point, processor.getDefault(), result);
             }
         }
-        Default defaultAnnotation = point.getAnnotation(Default.class);
-        if (defaultAnnotation == null) {
+
+        Object value = point.getDefaultValue();
+        if (value != null) {
+            return callback.inject(point, value, result);
+        }
+        else {
             return false;
         }
-
-        type = mapPrimitiveClasses(type);
-        Object value = null;
-
-        if (type instanceof Class) {
-            Class<?> injectedClass = (Class<?>) type;
-            if (injectedClass.isArray()) {
-                Class<?> componentType = injectedClass.getComponentType();
-                if (componentType == String.class) {
-                    value = defaultAnnotation.values();
-                } else if (componentType == Integer.TYPE) {
-                    value = defaultAnnotation.intValues();
-                } else if (componentType == Integer.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.intValues());
-                } else if (componentType == Long.TYPE) {
-                    value = defaultAnnotation.longValues();
-                } else if (componentType == Long.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.longValues());
-                } else if (componentType == Boolean.TYPE) {
-                    value = defaultAnnotation.booleanValues();
-                } else if (componentType == Boolean.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.booleanValues());
-                } else if (componentType == Short.TYPE) {
-                    value = defaultAnnotation.shortValues();
-                } else if (componentType == Short.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.shortValues());
-                } else if (componentType == Float.TYPE) {
-                    value = defaultAnnotation.floatValues();
-                } else if (componentType == Float.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.floatValues());
-                } else if (componentType == Double.TYPE) {
-                    value = defaultAnnotation.doubleValues();
-                } else if (componentType == Double.class) {
-                    value = ArrayUtils.toObject(defaultAnnotation.doubleValues());
-                } else {
-                    log.warn("Default values for {} are not supported", componentType);
-                    return false;
-                }
-            } else {
-                if (injectedClass == String.class) {
-                    value = defaultAnnotation.values().length == 0 ? "" : defaultAnnotation.values()[0];
-                } else if (injectedClass == Integer.class) {
-                    value = defaultAnnotation.intValues().length == 0 ? 0 : defaultAnnotation.intValues()[0];
-                } else if (injectedClass == Long.class) {
-                    value = defaultAnnotation.longValues().length == 0 ? 0l : defaultAnnotation.longValues()[0];
-                } else if (injectedClass == Boolean.class) {
-                    value = defaultAnnotation.booleanValues().length == 0 ? false : defaultAnnotation.booleanValues()[0];
-                } else if (injectedClass == Short.class) {
-                    value = defaultAnnotation.shortValues().length == 0 ? ((short) 0) : defaultAnnotation.shortValues()[0];
-                } else if (injectedClass == Float.class) {
-                    value = defaultAnnotation.floatValues().length == 0 ? 0f : defaultAnnotation.floatValues()[0];
-                } else if (injectedClass == Double.class) {
-                    value = defaultAnnotation.doubleValues().length == 0 ? 0d : defaultAnnotation.doubleValues()[0];
-                } else {
-                    log.warn("Default values for {} are not supported", injectedClass);
-                    return false;
-                }
-            }
-        } else {
-            log.warn("Cannot provide default for {}", type);
-            return false;
-        }
-        return callback.inject(point, value);
     }
 
     /**
@@ -640,9 +606,10 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
      * @param point Annotated element
      * @param wrapperType Non-primitive wrapper class for primitive class
      * @param callback Inject callback
+     * @param result
      */
-    private void injectPrimitiveInitialValue(AnnotatedElement point, Type wrapperType, InjectCallback callback) {
-        Type primitiveType = mapWrapperClasses(wrapperType);
+    private void injectPrimitiveInitialValue(InjectableElement point, InjectCallback callback, Result<?> result) {
+        Type primitiveType = ReflectionUtil.mapWrapperClasses(point.getType());
         Object value = null;
         if (primitiveType == int.class) {
             value = Integer.valueOf(0);
@@ -662,21 +629,20 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
             value = Character.valueOf('\u0000');
         }
         if (value != null) {
-            callback.inject(point, value);
+            callback.inject(point, value, result);
         };
     }
     
-    private Object getAdaptable(Object adaptable, AnnotatedElement point, InjectAnnotationProcessor processor) {
+    private Object getAdaptable(Object adaptable, InjectableElement point, InjectAnnotationProcessor processor) {
         String viaPropertyName = null;
         if (processor != null) {
             viaPropertyName = processor.getVia();
         }
         if (viaPropertyName == null) {
-            Via viaAnnotation = point.getAnnotation(Via.class);
-            if (viaAnnotation == null) {
-                return adaptable;
-            }
-            viaPropertyName = viaAnnotation.value();
+            viaPropertyName = point.getVia();
+        }
+        if (viaPropertyName == null) {
+            return adaptable;
         }
         try {
             return PropertyUtils.getProperty(adaptable, viaPropertyName);
@@ -686,7 +652,7 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    private String getName(AnnotatedElement element, InjectAnnotationProcessor processor) {
+    private String getName(InjectableElement element, InjectAnnotationProcessor processor) {
         // try to get the name from injector-specific annotation
         if (processor != null) {
             String name = processor.getName();
@@ -694,46 +660,30 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
                 return name;
             }
         }
-        // alternative for name attribute
-        Named named = element.getAnnotation(Named.class);
-        if (named != null) {
-            return named.value();
-        }
-        if (element instanceof Method) {
-            return getNameFromMethod((Method) element);
-        } else if (element instanceof Field) {
-            return getNameFromField((Field) element);
-        } else if (element instanceof ConstructorParameter) {
-            // implicit name not supported for constructor parameters - but do not throw exception because class-based injection is still possible
-            return null;
-        } else {
-            throw new IllegalArgumentException("The given element must be either method or field but is " + element);
-        }
+        // get name from @Named annotation or element name
+        return element.getName();
     }
 
-    private String getNameFromField(Field field) {
-        return field.getName();
-    }
-
-    private String getNameFromMethod(Method method) {
-        String methodName = method.getName();
-        if (methodName.startsWith("get")) {
-            return methodName.substring(3, 4).toLowerCase() + methodName.substring(4);
-        } else if (methodName.startsWith("is")) {
-            return methodName.substring(2, 3).toLowerCase() + methodName.substring(3);
-        } else {
-            return methodName;
+    private boolean addMethodIfNotOverriden(List<Method> methods, Method newMethod) {
+        for (Method method : methods) {
+            if (method.getName().equals(newMethod.getName())) {
+                if (Arrays.equals(method.getParameterTypes(),newMethod.getParameterTypes())) {
+                    return false;
+                }
+            }
         }
+        methods.add(newMethod);
+        return true;
     }
 
-    private void invokePostConstruct(Object object) throws Exception {
+    private void invokePostConstruct(Object object) throws InvocationTargetException, IllegalAccessException {
         Class<?> clazz = object.getClass();
         List<Method> postConstructMethods = new ArrayList<Method>();
         while (clazz != null) {
             Method[] methods = clazz.getDeclaredMethods();
             for (Method method : methods) {
                 if (method.isAnnotationPresent(PostConstruct.class)) {
-                    postConstructMethods.add(method);
+                    addMethodIfNotOverriden(postConstructMethods, method);
                 }
             }
             clazz = clazz.getSuperclass();
@@ -754,25 +704,10 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    private static Type mapPrimitiveClasses(Type type) {
-        if (type instanceof Class<?>) {
-            return ClassUtils.primitiveToWrapper((Class<?>) type);
-        } else {
-            return type;
-        }
-    }
-
-    private static Type mapWrapperClasses(Type type) {
-        if (type instanceof Class<?>) {
-            return ClassUtils.wrapperToPrimitive((Class<?>) type);
-        } else {
-            return type;
-        }
-    }
-
-    private static boolean setField(Field field, Object createdObject, Object value) {
+    private boolean setField(InjectableField injectableField, Object createdObject, Object value, Result<?> result) {
         if (value != null) {
-            value = adaptIfNecessary(value, field.getType(), field.getGenericType());
+            Field field = injectableField.getField();
+            value = adaptIfNecessary(value, field.getType(), field.getGenericType(), result);
             // value may now be null due to the adaptation done above
             if (value == null) {
                 return false;
@@ -797,9 +732,10 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    private static boolean setMethod(Method method, Map<Method, Object> methods, Object value) {
+    private boolean setMethod(InjectableMethod injectableMethod, Map<Method, Object> methods, Object value, Result<?> result) {
         if (value != null) {
-            value = adaptIfNecessary(value, method.getReturnType(), method.getGenericReturnType());
+            Method method = injectableMethod.getMethod();
+            value = adaptIfNecessary(value, method.getReturnType(), method.getGenericReturnType(), result);
             // value may now be null due to the adaptation done above
             if (value == null) {
                 return false;
@@ -811,9 +747,9 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    private static boolean setConstructorParameter(ConstructorParameter constructorParameter, List<Object> parameterValues, Object value) {
-        if (value != null && constructorParameter.getType() instanceof Class<?>) {
-            value = adaptIfNecessary(value, (Class<?>) constructorParameter.getType(), constructorParameter.getGenericType());
+    private boolean setConstructorParameter(ConstructorParameter constructorParameter, List<Object> parameterValues, Object value, Result<?> result) {
+        if (value != null && constructorParameter.getParameterType() instanceof Class<?>) {
+            value = adaptIfNecessary(value, (Class<?>) constructorParameter.getParameterType(), constructorParameter.getGenericType(), result);
             // value may now be null due to the adaptation done above
             if (value == null) {
                 return false;
@@ -825,10 +761,18 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    private static Object adaptIfNecessary(Object value, Class<?> type, Type genericType) {
+    private Object adaptIfNecessary(Object value, Class<?> type, Type genericType, Result<?> parentResult) {
         if (!isAcceptableType(type, genericType, value)) {
             Class<?> declaredType = type;
-            if (value instanceof Adaptable) {
+            if (isModelClass(value, type) && canCreateFromAdaptable(value, type)) {
+                Result<?> result = internalCreateModel(value, type);
+                if (result.getModel() == null) {
+                    parentResult.appendFailures(result);
+                    value = null;
+                } else {
+                    value = result.getModel();
+                }
+            } else if (value instanceof Adaptable) {
                 value = ((Adaptable) value).adaptTo(type);
             } else if (genericType instanceof ParameterizedType) {
                 ParameterizedType parameterizedType = (ParameterizedType) genericType;
@@ -962,17 +906,44 @@ public class ModelAdapterFactory implements AdapterFactory, Runnable {
         }
     }
 
-    protected void bindInjectAnnotationProcessorFactory(final InjectAnnotationProcessorFactory injector, final Map<String, Object> props) {
+    protected void bindInjectAnnotationProcessorFactory(final InjectAnnotationProcessorFactory factory, final Map<String, Object> props) {
         synchronized (injectAnnotationProcessorFactories) {
-            injectAnnotationProcessorFactories.put(ServiceUtil.getComparableForServiceRanking(props), injector);
+            injectAnnotationProcessorFactories.put(ServiceUtil.getComparableForServiceRanking(props), factory);
             sortedInjectAnnotationProcessorFactories = injectAnnotationProcessorFactories.values().toArray(new InjectAnnotationProcessorFactory[injectAnnotationProcessorFactories.size()]);
         }
     }
 
-    protected void unbindInjectAnnotationProcessorFactory(final InjectAnnotationProcessorFactory injector, final Map<String, Object> props) {
+    protected void unbindInjectAnnotationProcessorFactory(final InjectAnnotationProcessorFactory factory, final Map<String, Object> props) {
         synchronized (injectAnnotationProcessorFactories) {
             injectAnnotationProcessorFactories.remove(ServiceUtil.getComparableForServiceRanking(props));
             sortedInjectAnnotationProcessorFactories = injectAnnotationProcessorFactories.values().toArray(new InjectAnnotationProcessorFactory[injectAnnotationProcessorFactories.size()]);
+        }
+    }
+    protected void bindInjectAnnotationProcessorFactory2(final InjectAnnotationProcessorFactory2 factory, final Map<String, Object> props) {
+        synchronized (injectAnnotationProcessorFactories2) {
+            injectAnnotationProcessorFactories2.put(ServiceUtil.getComparableForServiceRanking(props), factory);
+            sortedInjectAnnotationProcessorFactories2 = injectAnnotationProcessorFactories2.values().toArray(new InjectAnnotationProcessorFactory2[injectAnnotationProcessorFactories2.size()]);
+        }
+    }
+
+    protected void unbindInjectAnnotationProcessorFactory2(final InjectAnnotationProcessorFactory2 factory, final Map<String, Object> props) {
+        synchronized (injectAnnotationProcessorFactories2) {
+            injectAnnotationProcessorFactories2.remove(ServiceUtil.getComparableForServiceRanking(props));
+            sortedInjectAnnotationProcessorFactories2 = injectAnnotationProcessorFactories2.values().toArray(new InjectAnnotationProcessorFactory2[injectAnnotationProcessorFactories2.size()]);
+        }
+    }
+
+    protected void bindStaticInjectAnnotationProcessorFactory(final StaticInjectAnnotationProcessorFactory factory, final Map<String, Object> props) {
+        synchronized (staticInjectAnnotationProcessorFactories) {
+            staticInjectAnnotationProcessorFactories.put(ServiceUtil.getComparableForServiceRanking(props), factory);
+            this.adapterImplementations.setStaticInjectAnnotationProcessorFactories(staticInjectAnnotationProcessorFactories.values());
+        }
+    }
+
+    protected void unbindStaticInjectAnnotationProcessorFactory(final StaticInjectAnnotationProcessorFactory factory, final Map<String, Object> props) {
+        synchronized (staticInjectAnnotationProcessorFactories) {
+            staticInjectAnnotationProcessorFactories.remove(ServiceUtil.getComparableForServiceRanking(props));
+            this.adapterImplementations.setStaticInjectAnnotationProcessorFactories(staticInjectAnnotationProcessorFactories.values());
         }
     }
 
